[package]
name = "url_shortner"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "url-shortner"
path = "src/main.rs"

[dependencies]
actix-http = "3.7.0"
actix-web = "4.7.0"
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
macros = { git = "https://github.com/nammayatri/shared-kernel-rs", rev = "5291e87" }
thiserror = "1.0.61"
chrono = { version = "0.4.38", features = ["serde"] }
shared = { git = "https://github.com/nammayatri/shared-kernel-rs", rev = "5291e87" }
rand = "0.8.5"
tracing = "0.1.40"
tokio = "1.38.0"
reqwest = "0.12.5"
serde_dhall = "0.12.1"
