[package]
name = "url_shortner"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "url-shortner"
path = "src/main.rs"

[dependencies]
actix-http = "3.7.0"
actix-web = "4.7.0"
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
macros = { git = "https://github.com/nammayatri/shared-kernel-rs", rev = "df43236" }
thiserror = "1.0.61"
chrono = { version = "0.4.38", features = ["serde"] }
shared = { git = "https://github.com/nammayatri/shared-kernel-rs", rev = "df43236" }
rand = "0.8.5"
tracing = "0.1.40"
tokio = "1.38.0"
once_cell = "1.17.1"
reqwest = "0.12.5"
serde_dhall = "0.12.1"
tracing-actix-web = "0.7.5"
actix-web-prom = "0.7.0"
prometheus = { version = "0.13.3", features = ["process"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry", "json"] }
futures = "0.3.28"
actix = "0.13.0"
uuid = "1.4.1"